<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="700dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingLeft="14dp"
            android:paddingTop="14dp"
            android:paddingRight="14dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/subheadingBottomMargin"
                        android:text="@string/first_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/subheadingSize" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/name"
                        android:drawableLeft="@drawable/name"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:importantForAutofill="auto"
                        android:inputType="textCapWords"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/edt_textSize" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_marginBottom="@dimen/fieldBottomMargin"
                        android:background="@color/colorAccent" />
                    ////

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/subheadingBottomMargin"
                        android:text="@string/last_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/subheadingSize" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/name"
                        android:drawableLeft="@drawable/name"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:importantForAutofill="auto"
                        android:inputType="textCapWords"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/edt_textSize" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_marginBottom="@dimen/fieldBottomMargin"
                        android:background="@color/colorAccent" />
                    ////

                </LinearLayout>

            </LinearLayout>
            ////

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/subheadingBottomMargin"
                android:text="National Identity Card Number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/subheadingSize" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/passport"
                android:drawableLeft="@drawable/passport"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:importantForAutofill="auto"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/edt_textSize" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginBottom="@dimen/fieldBottomMargin"
                android:background="@color/colorAccent" />
            ////

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/subheadingBottomMargin"
                android:text="@string/date_of_birth"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/subheadingSize" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/calendar"
                android:drawableLeft="@drawable/calendar"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:importantForAutofill="auto"
                android:inputType="date"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/edt_textSize" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginBottom="@dimen/fieldBottomMargin"
                android:background="@color/colorAccent" />
            ////

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/subheadingBottomMargin"
                android:text="@string/driver_address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/subheadingSize" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/address"
                android:drawableLeft="@drawable/address"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:importantForAutofill="auto"
                android:inputType="textPostalAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/edt_textSize" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginBottom="@dimen/fieldBottomMargin"
                android:background="@color/colorAccent" />
            ////

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/subheadingBottomMargin"
                        android:text="@string/contact_1"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/subheadingSize" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/phone2"
                        android:drawableLeft="@drawable/phone2"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:importantForAutofill="auto"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/edt_textSize" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_marginBottom="@dimen/fieldBottomMargin"
                        android:background="@color/colorAccent" />
                    ////

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/subheadingBottomMargin"
                        android:text="@string/contact_2"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/subheadingSize" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/phone1"
                        android:drawableLeft="@drawable/phone1"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:importantForAutofill="auto"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/edt_textSize" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_marginBottom="@dimen/fieldBottomMargin"
                        android:background="@color/colorAccent" />
                    ////

                </LinearLayout>

            </LinearLayout>

            ////

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/subheadingBottomMargin"
                android:text="@string/email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/subheadingSize" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/email"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:importantForAutofill="auto"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/edt_textSize" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginBottom="@dimen/fieldBottomMargin"
                android:background="@color/colorAccent" />
            ////

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/subheadingBottomMargin"
                android:text="@string/gender"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/subheadingSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/gender"
                    android:drawableLeft="@drawable/gender"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:importantForAutofill="auto"
                    android:inputType="date"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/edt_textSize" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spn_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/spn_gender"
                    android:padding="8dp"
                    android:popupBackground="@color/colorWhite" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginBottom="@dimen/fieldBottomMargin"
                android:background="@color/colorAccent" />
            ////

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/subheadingBottomMargin"
                android:background="@drawable/loginbutton_selector_blue"
                android:drawablePadding="0dp"
                android:padding="3dp"
                android:text="Submit Application"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                android:textStyle="bold" />
            ////
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:padding="5dp"
        android:text="@string/already_user"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

</LinearLayout>